--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crown</title>
+    <link rel="icon" href="images/crown_e.png" type="image/png">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -172,9 +173,8 @@
 <body>
     <div class="content">
         <div class="header">
-            <h1>How "The Crown" Captivates Newer Republics</h1>
-            <p class="subhead">European Countries That Became Republics More Recently Stream "The Crown" More Than Others, With Ukraine Leading by Far.  
-            </p>
+            <h1>Why Eastern Europe Can't Get Enough of "The Crown"</h1>
+            <p class="subhead">European Countries That Became Republics More Recently Stream "The Crown" More Than Others, With Ukraine Leading by Far.</p>
             <div class="image-container">
                 <figure>
                     <img src="images/crown.png" alt="Crown Image" width="600" height="400">
